[package]
name = "ort_rust2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
blas-src = { version = "0.9.0", features = ["openblas"] }
cv-convert = { version = "0.25.0", default-features = false, features = ["ndarray_0-15",  "opencv_0-84"]}
itertools = "0.12.0"
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-stats = "0.5.1"
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
opencv = "0.84.5"
ort = { version = "2.0.0-alpha.2", features = ["load-dynamic"]}

